unpackaged/main/default/objects/ons_EntityMatchingTable__mdt/ons_EntityMatchingTable__mdt.object-meta.xml
<CustomObject>
    <label>Entity Matching Table</label>
    <pluralLabel>Entity Matching Tables</pluralLabel>
</CustomObject>