unpackaged/main/default/objects/ons_EntityMatchingTable__mdt/fields/EntityCode__c.field-meta.xml
<CustomField>
    <fullName>EntityCode__c</fullName>
    <label>EntityCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>