unpackaged/main/default/objects/ons_EntityMatchingTable__mdt/fields/EntityIdZuora__c.field-meta.xml
<CustomField>
    <fullName>EntityIdZuora__c</fullName>
    <label>EntityIdZuora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>