unpackaged/main/default/objects/ons_EntityMatchingTable__mdt/fields/Source_BI__c.field-meta.xml
<CustomField>
    <fullName>Source_BI__c</fullName>
    <label>Source BI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>