unpackaged/main/default/objects/ons_EntityMatchingTable__mdt/listViews/FullTableView.listView-meta.xml
<ListView>
    <fullName>FullTableView</fullName>
    <columns>EntityIdZuora__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>EntityCode__c</columns>
    <columns>Source_BI__c</columns>
    <filterScope>Everything</filterScope>
    <label>Full Table View</label>
    <language>en_US</language>
</ListView>